# Proximus

./: README.md  build.bat  dev.bat  index.html  package-lock.json  package.json
src/: App.tsx  main.tsx  themes.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_settings.rs  file_sync.rs  lib.rs  logging.rs  memory.rs  model_rewriter.rs  process_manager.rs  pty.rs  scaffold.rs  tab_store.rs
src-tauri/templates/project-scaffold/: CLAUDE.md
src-tauri/templates/project-scaffold/.claude-memory/: MANIFEST.toml  state.toml
src-tauri/templates/project-scaffold/.claude-memory/tools/: validate.py
src-tauri/templates/project-scaffold/.claude/skills/code-review/: SKILL.md
src-tauri/templates/project-scaffold/.claude/skills/code-security/: SKILL.md
src-tauri/templates/project-scaffold/.claude/skills/commit/: SKILL.md
src-tauri/templates/project-scaffold/.claude/skills/create-tests/: SKILL.md
src-tauri/templates/project-scaffold/.claude/skills/dev-team/: SKILL.md
src-tauri/templates/project-scaffold/.claude/skills/ux-review/: SKILL.md
src-tauri/templates/project-scaffold/.node-memory/: MANIFEST.toml  graph.toml  invariants.toml  state.toml
src-tauri/templates/project-scaffold/.node-memory/prompts/: bootstrap-repo.md  bootstrap.md  claude-md-protocol.md  migrate.md
src-tauri/templates/project-scaffold/.node-memory/tools/: validate.py
src/components/: ChromeBar.tsx  CliModeWarningModal.tsx  DependencyDialog.tsx  LogsPanel.tsx  MemoryGraphView.tsx  MigrationDialog.tsx  NodeDetail.tsx  (+11 more)
(+5 files in other folders)
