[package]
name = "copilot-workspace"
version = "0.1.0"
description = "Proximus Workspace"
authors = ["you"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
notify = "6"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2"
chrono = "0.4"
dirs = "5"
regex = { version = "1", features = ["std"] }
include_dir = "0.7"
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "client-legacy"] }
tauri-plugin-single-instance = "2"
http-body-util = "0.1"
bytes = "1"
